# vssss

./: CMakeLists.txt  CMakePresets.json  README_AR.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: windows-build.yml
resources/: app.qrc
scripts/: build_debug.bat  build_release.bat
src/: main.cpp
src/app/: AppConfig.cpp  AppConfig.h  HotkeyManager_win.cpp  HotkeyManager_win.h  Logger.cpp  Logger.h  ProfileManager.cpp  ProfileManager.h
src/capture/: ScreenCapture.cpp  ScreenCapture.h
src/extensions/: DefaultAssistExtension.cpp  DefaultAssistExtension.h  IAssistExtension.h
src/overlay/: OverlayWindow.cpp  OverlayWindow.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/pages/: ColorsPage.cpp  ColorsPage.h  DashboardPage.cpp  DashboardPage.h  DetectionPage.cpp  DetectionPage.h  HotkeysPage.cpp  HotkeysPage.h  OverlayPage.cpp  OverlayPage.h  ProfilesPage.cpp  ProfilesPage.h  StatsPage.cpp  StatsPage.h  SystemPage.cpp  SystemPage.h
src/ui/widgets/: ColorPickerPanel.cpp  ColorPickerPanel.h  HueSlider.cpp  HueSlider.h  SVPicker.cpp  SVPicker.h  ValueCard.cpp  ValueCard.h
src/vision/: ColorMath.cpp  ColorMath.h  ColorRange.cpp  ColorRange.h  Detector.cpp  Detector.h
